[gd_scene load_steps=5 format=3 uid="uid://cu6oq4whbnukt"]

[ext_resource type="Script" path="res://scripts/ui/menus/pause_menu.gd" id="1_g7bl1"]
[ext_resource type="Script" path="res://scripts/ui/buttons/resume.gd" id="2_2xpcw"]
[ext_resource type="Shader" path="res://assets/themes/pause_menu.gdshader" id="2_qfjy8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iglms"]
shader = ExtResource("2_qfjy8")
shader_parameter/amount = 2.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7bl1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_iglms")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.270588)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.496
anchor_top = 0.007
anchor_right = 1.005
anchor_bottom = 0.25
offset_left = 34.12
offset_top = -41.04
offset_right = 0.599976
offset_bottom = 3.0
grow_horizontal = 0
rotation = 0.156194
theme_override_font_sizes/font_size = 160
text = "PAUSED"

[node name="Resume" type="Button" parent="."]
layout_mode = 2
anchor_right = 0.248
anchor_bottom = 0.164
offset_right = 0.559998
offset_bottom = -0.0800018
theme_override_font_sizes/font_size = 80
text = "Resume"
script = ExtResource("2_2xpcw")

[node name="Settings" type="Button" parent="."]
layout_mode = 2
anchor_top = 0.396
anchor_right = 0.248
anchor_bottom = 0.56
offset_top = -0.120026
offset_right = 0.559998
offset_bottom = -0.200012
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
anchor_top = 0.836
anchor_right = 0.248
anchor_bottom = 1.0
offset_top = 0.0799561
offset_right = 0.559998
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Quit"

[node name="Respawn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.89
anchor_top = 0.926
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.200073
offset_top = 0.279968
theme_override_font_sizes/font_size = 32
text = "respawn"

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Respawn" to="." method="_on_respawn_pressed"]
